separate features are now classes

--- a/practice_script.ipynb
+++ b/practice_script.ipynb
@@ -86,7 +86,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#list(centrality.degree_centrality(G).values())\n",
     "degree_centrality = np.asarray(list(centrality.degree_centrality(G).values()))\n"
    ]
   },
@@ -106,11 +105,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "from hcga.Operations import DistributionFitting\n",
-    "\n",
-    "DistributionFitting.power_law_fit(degree_centrality,bins=10)[0][-2]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -120,8 +115,7 @@
    "source": [
     "from hcga.Operations import centrality_degree\n",
     "\n",
-    "features = centrality_degree.DegreeCentrality(G,10)\n",
-    "\n"
+    "features = centrality_degree.DegreeCentrality(G,10)"
    ]
   },
   {
@@ -137,39 +131,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from hcga.Operations import basic_stats\n",
+    "\n",
+    "features = basic_stats.basic_stats(G)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(['num_triangles',\n",
-       "  'transitivity',\n",
-       "  'clustering_mean',\n",
-       "  'clustering_std',\n",
-       "  'clustering_median',\n",
-       "  'square_clustering_meansquare_clustering_std',\n",
-       "  'square_clustering_median'],\n",
-       " [3.9705882352941178,\n",
-       "  0.2556818181818182,\n",
-       "  0.5706384782076823,\n",
-       "  0.342266011779565,\n",
-       "  0.5,\n",
-       "  0.2881950378613188,\n",
-       "  0.25735167066472164,\n",
-       "  0.22532863849765258])"
+       "(['num_nodes', 'num_edges', 'degree_mean', 'degree_median', 'degree_std'],\n",
+       " [34, 78, 16.5, 16.5, 9.810708435174291])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "from hcga.Operations import basic_stats\n",
-    "\n",
-    "features = basic_stats.tiangle_stats(G)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
