--- a/hcga/practice_graphs.ipynb
+++ b/hcga/practice_graphs.ipynb
@@ -152,40 +152,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Graph 37 is not connected. Taking largest subgraph and relabelling the nodes.\n",
-      "Graph 51 is not connected. Taking largest subgraph and relabelling the nodes.\n",
-      "Graph 96 is not connected. Taking largest subgraph and relabelling the nodes.\n",
-      "Graph 120 is not connected. Taking largest subgraph and relabelling the nodes.\n",
-      "Graph 129 is not connected. Taking largest subgraph and relabelling the nodes.\n",
-      "Graph 153 is not connected. Taking largest subgraph and relabelling the nodes.\n",
-      "Graph 166 is not connected. Taking largest subgraph and relabelling the nodes.\n",
-      "Graph 178 is not connected. Taking largest subgraph and relabelling the nodes.\n",
-      "Graph 235 is not connected. Taking largest subgraph and relabelling the nodes.\n",
-      "Graph 274 is not connected. Taking largest subgraph and relabelling the nodes.\n",
-      "Graph 285 is not connected. Taking largest subgraph and relabelling the nodes.\n",
-      "Graph 286 is not connected. Taking largest subgraph and relabelling the nodes.\n",
-      "Graph 287 is not connected. Taking largest subgraph and relabelling the nodes.\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "299"
+       "array([ 11.      ,  16.362935,  40.38    ,  -2.03    ,   1.777   ,\n",
+       "       102.6     ,   2.      ,   7.      ,   2.      ,   6.      ,\n",
+       "         2.      ,   3.      ,   3.      ,   2.      ,   6.      ,\n",
+       "         1.      ,   8.      ,   2.      ])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "G = graph_obj.graphs[0]\n",
+    "G.node[0]['feat']"
+   ]
   },
   {
    "cell_type": "code",
