updated saving and loading

--- a/hcga/Operations/practice_script.ipynb
+++ b/hcga/Operations/practice_script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,44 +44,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'numpy.ndarray' object has no attribute 'eigenvectors'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-0e7f397ec975>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mOpobj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mG\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mOpobj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfeature_extraction\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0mOpobj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mG\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/robert/Documents/PythonCode/hcga/hcga/Operations/operations.py\u001b[0m in \u001b[0;36mfeature_extraction\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    121\u001b[0m                 \u001b[0mfeature_obj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfeature_extraction\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    122\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 123\u001b[0;31m                 \u001b[0mfeature_obj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfeature_extraction\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    124\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    125\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/robert/anaconda3/lib/python3.6/site-packages/hcga/Operations/centrality_eigenvector.py\u001b[0m in \u001b[0;36mfeature_extraction\u001b[0;34m(self, args)\u001b[0m\n\u001b[1;32m     90\u001b[0m         \u001b[0;31m# extract the precomputed eigenvectors from the operations object\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     91\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 92\u001b[0;31m         \u001b[0meigenvector\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mop_obj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meigenvectors\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     93\u001b[0m         \u001b[0mlargest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0meigenvector\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflatten\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreal\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     94\u001b[0m         \u001b[0mnorm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msign\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlargest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0msp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnorm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlargest\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'eigenvectors'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from operations import Operations\n",
     "\n",
     "Opobj = Operations(G,'operations.yaml')\n",
     "Opobj.load_yaml()\n",
     "\n",
-    "Opobj.operations_dict\n",
+    "#Opobj.operations_dict\n",
     "\n",
-    "Opobj.G\n",
-    "Opobj.feature_extraction()\n",
+    "#Opobj.G\n",
+    "#Opobj.feature_extraction()\n",
     "\n",
-    "Opobj.G\n",
+    "#Opobj.G\n",
     "\n",
-    "Opobj.eigenvectors\n"
+    "#Opobj.eigenvectors\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Opobj.feature_extraction()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +125,15 @@
        "  'EC_opt_model_50',\n",
        "  'EC_powerlaw_a_50',\n",
        "  'EC_powerlaw_SSE_50'],\n",
-       " ['MC_num_comms_greedy_mod'],\n",
+       " ['MC_num_comms_greedy_mod',\n",
+       "  'MC_ratio_max_min_num_nodes',\n",
+       "  'MC_ratio_max_2max_num_nodes',\n",
+       "  'MC_mod',\n",
+       "  'MC_coverage',\n",
+       "  'MC_performance',\n",
+       "  'MC_inter_comm_edge',\n",
+       "  'MC_inter_comm_nedge',\n",
+       "  'MC_intra_comm_edge'],\n",
        " ['NC_mean_10',\n",
        "  'NC_std_10',\n",
        "  'NC_median_10',\n",
@@ -287,199 +290,13 @@
        "  'CL_intra_comm_edge']]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "Opobj.feature_names"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[34, 78, 16.5, 16.5, 9.810708435174291],\n",
-       " [3.9705882352941178,\n",
-       "  0.2556818181818182,\n",
-       "  0.5706384782076823,\n",
-       "  0.342266011779565,\n",
-       "  0.5,\n",
-       "  0.2881950378613188,\n",
-       "  0.25735167066472164,\n",
-       "  0.22532863849765258],\n",
-       " [0.1390374331550802,\n",
-       "  0.11576850539129781,\n",
-       "  3,\n",
-       "  0.030303030303030297,\n",
-       "  159.91517479998447],\n",
-       " [0.1390374331550802,\n",
-       "  0.11576850539129781,\n",
-       "  3,\n",
-       "  0.030303030303030297,\n",
-       "  123.63439046577764],\n",
-       " [0.1390374331550802,\n",
-       "  0.11576850539129781,\n",
-       "  3,\n",
-       "  0.030303030303030297,\n",
-       "  281.6316253244738],\n",
-       " [0.1464113036400676,\n",
-       "  0.08930562620741359,\n",
-       "  3,\n",
-       "  -0.011337942017095367,\n",
-       "  67.76939156111155],\n",
-       " [0.1464113036400676,\n",
-       "  0.08930562620741359,\n",
-       "  3,\n",
-       "  -0.011337942017095367,\n",
-       "  68.37518935432432],\n",
-       " [0.1464113036400676,\n",
-       "  0.08930562620741359,\n",
-       "  3,\n",
-       "  -0.011337942017095367,\n",
-       "  252.35978156173428],\n",
-       " [3],\n",
-       " [2.152249134948097, 1.2985233003150884, 2.0, 12.0, 0.0, 2, 2, 2, 1351.0],\n",
-       " [74.72727272727273, 24.870906366095195, 85.0, 116.0, -20.0, 4],\n",
-       " [0.45417498653406113,\n",
-       "  0.45417498653406113,\n",
-       "  0.4598765432098765,\n",
-       "  1.0,\n",
-       "  0.15542329764660495,\n",
-       "  4,\n",
-       "  3.214273356401384,\n",
-       "  3.452679597587806,\n",
-       "  2.3333333333333335,\n",
-       "  15.235294117647058,\n",
-       "  1.0,\n",
-       "  4],\n",
-       " [3640.0],\n",
-       " [1.751069004001485, 0],\n",
-       " [3.3373702422145324, 5.029411764705882, 6],\n",
-       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       " [-1.913697286371186,\n",
-       "  1.3251668666919154,\n",
-       "  4.995264177844956,\n",
-       "  0.05727293072121779,\n",
-       "  0,\n",
-       "  -5.296203847894995,\n",
-       "  182.29364110304115],\n",
-       " [1.0,\n",
-       "  0.3717948717948702,\n",
-       "  0.8717948717948718,\n",
-       "  0.6185383244206774,\n",
-       "  10,\n",
-       "  279,\n",
-       "  68],\n",
-       " [0.11805555555555555,\n",
-       "  0.8888888888888888,\n",
-       "  16,\n",
-       "  18,\n",
-       "  0.3714661406969078,\n",
-       "  0.8717948717948718,\n",
-       "  0.6167557932263814,\n",
-       "  10,\n",
-       "  278,\n",
-       "  68,\n",
-       "  0.8888888888888888,\n",
-       "  0.11805555555555555,\n",
-       "  0.8888888888888888,\n",
-       "  16,\n",
-       "  18,\n",
-       "  0.3714661406969078,\n",
-       "  0.8717948717948718,\n",
-       "  0.6167557932263814,\n",
-       "  10,\n",
-       "  278,\n",
-       "  68,\n",
-       "  0.8888888888888888,\n",
-       "  0.11805555555555555,\n",
-       "  0.8888888888888888,\n",
-       "  18,\n",
-       "  16,\n",
-       "  0.3714661406969078,\n",
-       "  0.8717948717948718,\n",
-       "  0.6167557932263814,\n",
-       "  10,\n",
-       "  278,\n",
-       "  68,\n",
-       "  0.8888888888888888,\n",
-       "  0.11805555555555555,\n",
-       "  0.8888888888888888,\n",
-       "  18,\n",
-       "  16,\n",
-       "  0.371466140696909,\n",
-       "  0.8717948717948718,\n",
-       "  0.6167557932263814,\n",
-       "  10,\n",
-       "  278,\n",
-       "  68,\n",
-       "  1.125,\n",
-       "  0.11764705882352941,\n",
-       "  1.0,\n",
-       "  17,\n",
-       "  17,\n",
-       "  0.3448389217619966,\n",
-       "  0.8461538461538461,\n",
-       "  0.6114081996434938,\n",
-       "  12,\n",
-       "  277,\n",
-       "  66,\n",
-       "  1.0,\n",
-       "  0.11805555555555555,\n",
-       "  0.8888888888888888,\n",
-       "  16,\n",
-       "  18,\n",
-       "  0.3714661406969078,\n",
-       "  0.8717948717948718,\n",
-       "  0.6167557932263814,\n",
-       "  10,\n",
-       "  278,\n",
-       "  68,\n",
-       "  0.8888888888888888,\n",
-       "  0.11764705882352941,\n",
-       "  1.0,\n",
-       "  17,\n",
-       "  17,\n",
-       "  0.3461538461538443,\n",
-       "  0.8461538461538461,\n",
-       "  0.6114081996434938,\n",
-       "  12,\n",
-       "  277,\n",
-       "  66,\n",
-       "  1.0,\n",
-       "  0.11805555555555555,\n",
-       "  0.8888888888888888,\n",
-       "  16,\n",
-       "  18,\n",
-       "  0.3714661406969078,\n",
-       "  0.8717948717948718,\n",
-       "  0.6167557932263814,\n",
-       "  10,\n",
-       "  278,\n",
-       "  68,\n",
-       "  0.8888888888888888],\n",
-       " [5.333333333333333,\n",
-       "  0.3251150558842867,\n",
-       "  0.7692307692307693,\n",
-       "  0.6684491978609626,\n",
-       "  18,\n",
-       "  315,\n",
-       "  60]]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Opobj.feature_vals"
    ]
   },
   {
