--- a/hcga/practice_graphs.ipynb
+++ b/hcga/practice_graphs.ipynb
@@ -13,28 +13,42 @@
     "\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
     "%matplotlib notebook"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "G = nx.karate_club_graph()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'g' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-f5302386464f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mg\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'g' is not defined"
+     ]
+    }
+   ],
    "source": []
   },
   {
@@ -44,19 +58,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "  0%|          | 0/299 [00:00<?, ?it/s]"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -75,79 +81,21 @@
       "Graph 286 is not connected. Taking largest subgraph and relabelling the nodes.\n",
       "Graph 287 is not connected. Taking largest subgraph and relabelling the nodes.\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  2%|▏         | 7/299 [00:28<19:28,  4.00s/it]/home/robert/anaconda3/lib/python3.6/site-packages/numpy/core/fromnumeric.py:3118: RuntimeWarning: Mean of empty slice.\n",
-      "  out=out, **kwargs)\n",
-      "/home/robert/anaconda3/lib/python3.6/site-packages/numpy/core/_methods.py:85: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  ret = ret.dtype.type(ret / rcount)\n",
-      "  3%|▎         | 10/299 [00:55<31:04,  6.45s/it]/home/robert/anaconda3/lib/python3.6/site-packages/numpy/lib/histograms.py:893: RuntimeWarning: divide by zero encountered in true_divide\n",
-      "  return n/db/n.sum(), bin_edges\n",
-      "/home/robert/anaconda3/lib/python3.6/site-packages/numpy/lib/histograms.py:893: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  return n/db/n.sum(), bin_edges\n",
-      "/home/robert/anaconda3/lib/python3.6/site-packages/numpy/lib/histograms.py:893: RuntimeWarning: divide by zero encountered in true_divide\n",
-      "  return n/db/n.sum(), bin_edges\n",
-      "/home/robert/anaconda3/lib/python3.6/site-packages/numpy/lib/histograms.py:893: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  return n/db/n.sum(), bin_edges\n",
-      "/home/robert/anaconda3/lib/python3.6/site-packages/numpy/lib/histograms.py:893: RuntimeWarning: divide by zero encountered in true_divide\n",
-      "  return n/db/n.sum(), bin_edges\n",
-      "/home/robert/anaconda3/lib/python3.6/site-packages/numpy/lib/histograms.py:893: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  return n/db/n.sum(), bin_edges\n",
-      " 12%|█▏        | 36/299 [03:17<23:44,  5.41s/it]/home/robert/anaconda3/lib/python3.6/site-packages/hcga/Operations/small_worldness.py:70: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  sigma = (C / Cr) / (L / Lr)\n",
-      " 39%|███▉      | 116/299 [09:36<17:49,  5.85s/it]/home/robert/anaconda3/lib/python3.6/site-packages/numpy/core/fromnumeric.py:3118: RuntimeWarning: Mean of empty slice.\n",
-      "  out=out, **kwargs)\n",
-      "/home/robert/anaconda3/lib/python3.6/site-packages/numpy/core/_methods.py:85: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  ret = ret.dtype.type(ret / rcount)\n",
-      " 40%|████      | 121/299 [10:10<15:03,  5.08s/it]/home/robert/anaconda3/lib/python3.6/site-packages/numpy/core/fromnumeric.py:3118: RuntimeWarning: Mean of empty slice.\n",
-      "  out=out, **kwargs)\n",
-      "/home/robert/anaconda3/lib/python3.6/site-packages/numpy/core/_methods.py:85: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  ret = ret.dtype.type(ret / rcount)\n",
-      " 45%|████▍     | 134/299 [11:10<09:39,  3.51s/it]/home/robert/anaconda3/lib/python3.6/site-packages/numpy/lib/histograms.py:893: RuntimeWarning: divide by zero encountered in true_divide\n",
-      "  return n/db/n.sum(), bin_edges\n",
-      "/home/robert/anaconda3/lib/python3.6/site-packages/numpy/lib/histograms.py:893: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  return n/db/n.sum(), bin_edges\n",
-      "/home/robert/anaconda3/lib/python3.6/site-packages/numpy/lib/histograms.py:893: RuntimeWarning: divide by zero encountered in true_divide\n",
-      "  return n/db/n.sum(), bin_edges\n",
-      "/home/robert/anaconda3/lib/python3.6/site-packages/numpy/lib/histograms.py:893: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  return n/db/n.sum(), bin_edges\n",
-      "/home/robert/anaconda3/lib/python3.6/site-packages/numpy/lib/histograms.py:893: RuntimeWarning: divide by zero encountered in true_divide\n",
-      "  return n/db/n.sum(), bin_edges\n",
-      "/home/robert/anaconda3/lib/python3.6/site-packages/numpy/lib/histograms.py:893: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  return n/db/n.sum(), bin_edges\n",
-      "/home/robert/anaconda3/lib/python3.6/site-packages/numpy/lib/histograms.py:893: RuntimeWarning: divide by zero encountered in true_divide\n",
-      "  return n/db/n.sum(), bin_edges\n",
-      "/home/robert/anaconda3/lib/python3.6/site-packages/numpy/lib/histograms.py:893: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  return n/db/n.sum(), bin_edges\n",
-      " 97%|█████████▋| 291/299 [24:10<01:02,  7.87s/it]/home/robert/anaconda3/lib/python3.6/site-packages/numpy/core/fromnumeric.py:3118: RuntimeWarning: Mean of empty slice.\n",
-      "  out=out, **kwargs)\n",
-      "/home/robert/anaconda3/lib/python3.6/site-packages/numpy/core/_methods.py:85: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  ret = ret.dtype.type(ret / rcount)\n",
-      " 98%|█████████▊| 293/299 [24:39<01:04, 10.78s/it]/home/robert/anaconda3/lib/python3.6/site-packages/numpy/core/fromnumeric.py:3118: RuntimeWarning: Mean of empty slice.\n",
-      "  out=out, **kwargs)\n",
-      "/home/robert/anaconda3/lib/python3.6/site-packages/numpy/core/_methods.py:85: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  ret = ret.dtype.type(ret / rcount)\n",
-      " 98%|█████████▊| 294/299 [25:09<01:23, 16.67s/it]/home/robert/anaconda3/lib/python3.6/site-packages/numpy/core/fromnumeric.py:3118: RuntimeWarning: Mean of empty slice.\n",
-      "  out=out, **kwargs)\n",
-      "/home/robert/anaconda3/lib/python3.6/site-packages/numpy/core/_methods.py:85: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  ret = ret.dtype.type(ret / rcount)\n",
-      " 99%|█████████▊| 295/299 [25:45<01:29, 22.40s/it]/home/robert/anaconda3/lib/python3.6/site-packages/numpy/core/fromnumeric.py:3118: RuntimeWarning: Mean of empty slice.\n",
-      "  out=out, **kwargs)\n",
-      "/home/robert/anaconda3/lib/python3.6/site-packages/numpy/core/_methods.py:85: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  ret = ret.dtype.type(ret / rcount)\n",
-      "100%|██████████| 299/299 [26:37<00:00, 12.96s/it]\n"
-     ]
     }
    ],
    "source": [
     "from hcga.graphs import Graphs\n",
     "\n",
     "graph_obj = Graphs()\n",
-    "graph_obj.calculate_features()\n",
+    "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "graph_obj.graphs"
    ]
   },
   {
@@ -333,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
