--- a/examples/example_unlabelled_data.ipynb
+++ b/examples/example_unlabelled_data.ipynb
@@ -8,12 +8,12 @@
     "\n",
     "Here we provide an example of extracting features and training a model on samples with known labels. We then take a secondary dataset without labels and predict their class. \n",
     "\n",
-    "Of course, in such a case we are unable to evaluate the accuracy but it provides a more realistic example that researchers may encounter."
+    "Of course, in a real scenario we are unable to predict the accuracy of our unlabelled samples. However, here we know how the data is generated and can confirm that the pipeline works correctly."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,8 +21,7 @@
     "import networkx as nx\n",
     "import pandas as pd\n",
     "from hcga.io import save_dataset\n",
-    "from hcga.graph import Graph, GraphCollection\n",
-    "from hcga.hcga import Hcga\n"
+    "from hcga.graph import Graph, GraphCollection\n"
    ]
   },
   {
@@ -34,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -141,6 +140,110 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Extract and analyse labelled data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define an object\n",
+    "from hcga.hcga import Hcga\n",
+    "\n",
+    "h = Hcga()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:hcga.extraction:Extracting features from 100 graphs (we disabled 0 graphs).\n",
+      "INFO:hcga.extraction:Computing features for 100 graphs:\n",
+      "[Parallel(n_jobs=4)]: Using backend LokyBackend with 4 concurrent workers.\n",
+      "[Parallel(n_jobs=4)]: Done   5 tasks      | elapsed:    5.5s\n",
+      "[Parallel(n_jobs=4)]: Done  10 tasks      | elapsed:    7.5s\n",
+      "[Parallel(n_jobs=4)]: Done  17 tasks      | elapsed:   10.0s\n",
+      "[Parallel(n_jobs=4)]: Done  24 tasks      | elapsed:   13.2s\n",
+      "[Parallel(n_jobs=4)]: Done  33 tasks      | elapsed:   17.0s\n",
+      "[Parallel(n_jobs=4)]: Done  42 tasks      | elapsed:   20.5s\n",
+      "[Parallel(n_jobs=4)]: Done  53 tasks      | elapsed:   25.3s\n",
+      "[Parallel(n_jobs=4)]: Done  64 tasks      | elapsed:   29.1s\n",
+      "[Parallel(n_jobs=4)]: Done  77 tasks      | elapsed:   33.8s\n",
+      "[Parallel(n_jobs=4)]: Done  90 tasks      | elapsed:   38.5s\n",
+      "[Parallel(n_jobs=4)]: Done 100 out of 100 | elapsed:   42.0s finished\n",
+      "INFO:hcga.extraction:1093 feature extracted.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# load and extract features for the primary dataset with training labels\n",
+    "h.load_data('./datasets/custom_dataset_classification_labelled.pkl')\n",
+    "h.extract(mode='fast', n_workers=4, timeout=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:numexpr.utils:Note: NumExpr detected 12 cores but \"NUMEXPR_MAX_THREADS\" not set, so enforcing safe limit of 8.\n",
+      "INFO:numexpr.utils:NumExpr defaulting to 8 threads.\n",
+      "INFO:hcga.analysis:... Using Xgboost classifier ...\n",
+      "INFO:hcga.analysis:1093 total features\n",
+      "INFO:hcga.analysis:0 graphs were removed for more than 0.3 fraction of bad features\n",
+      "INFO:hcga.analysis:1018 valid features\n",
+      "INFO:hcga.analysis:1018 with interpretability 1\n",
+      "INFO:hcga.analysis:Counts of graphs/label: \n",
+      "0.0    50\n",
+      "1.0    50\n",
+      "Name: label, dtype: int64\n",
+      "INFO:hcga.analysis:Using 10 splits\n",
+      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
+      "INFO:hcga.analysis:Fold accuracy: --- 0.9 ---\n",
+      "INFO:hcga.analysis:Fold accuracy: --- 0.9 ---\n",
+      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
+      "INFO:hcga.analysis:Fold accuracy: --- 0.9 ---\n",
+      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
+      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
+      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
+      "INFO:hcga.analysis:Fold accuracy: --- 0.9 ---\n",
+      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
+      "INFO:hcga.analysis:Accuracy: 0.96 +/- 0.049\n",
+      "INFO:hcga.analysis:Now using a reduced set of 100 features with < 0.9 correlation.\n",
+      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
+      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
+      "INFO:hcga.analysis:Fold accuracy: --- 0.9 ---\n",
+      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
+      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
+      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
+      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
+      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
+      "INFO:hcga.analysis:Fold accuracy: --- 0.9 ---\n",
+      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
+      "INFO:hcga.analysis:Accuracy with reduced set: 0.98 +/- 0.04\n",
+      "INFO:hcga.analysis:Fitting model to all data\n"
+     ]
+    }
+   ],
+   "source": [
+    "h.analyse_features(save_model=True,plot=False, results_folder='./results/test')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Construct synthetic data with no labels\n",
     "\n",
     "Creating synthetic data constructed in the same way as the training data but without labels."
@@ -148,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -251,55 +354,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Load labelled and unlabelled data into hcga"
+    "# Extract and predict unlabelled data using pre-trained model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# define an object\n",
-    "h = Hcga()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:hcga.extraction:Extracting features from 100 graphs (we disabled 0 graphs).\n",
-      "INFO:hcga.extraction:Computing features for 100 graphs:\n",
-      "[Parallel(n_jobs=4)]: Using backend LokyBackend with 4 concurrent workers.\n",
-      "[Parallel(n_jobs=4)]: Done   5 tasks      | elapsed:    5.3s\n",
-      "[Parallel(n_jobs=4)]: Done  10 tasks      | elapsed:    7.0s\n",
-      "[Parallel(n_jobs=4)]: Done  17 tasks      | elapsed:    9.4s\n",
-      "[Parallel(n_jobs=4)]: Done  24 tasks      | elapsed:   11.9s\n",
-      "[Parallel(n_jobs=4)]: Done  33 tasks      | elapsed:   15.3s\n",
-      "[Parallel(n_jobs=4)]: Done  42 tasks      | elapsed:   20.0s\n",
-      "[Parallel(n_jobs=4)]: Done  53 tasks      | elapsed:   23.6s\n",
-      "[Parallel(n_jobs=4)]: Done  64 tasks      | elapsed:   27.8s\n",
-      "[Parallel(n_jobs=4)]: Done  77 tasks      | elapsed:   32.2s\n",
-      "[Parallel(n_jobs=4)]: Done  90 tasks      | elapsed:   37.2s\n",
-      "[Parallel(n_jobs=4)]: Done 100 out of 100 | elapsed:   40.1s finished\n",
-      "INFO:hcga.extraction:970 feature extracted.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# load and extract features for the primary dataset with training labels\n",
-    "h.load_data('./datasets/custom_dataset_classification_labelled.pkl')\n",
-    "h.extract(mode='fast', n_workers=4, timeout=20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -310,46 +370,91 @@
       "INFO:hcga.extraction:Computing features for 20 graphs:\n",
       "[Parallel(n_jobs=4)]: Using backend LokyBackend with 4 concurrent workers.\n",
       "[Parallel(n_jobs=4)]: Done   5 tasks      | elapsed:    2.4s\n",
-      "[Parallel(n_jobs=4)]: Done  10 tasks      | elapsed:    4.4s\n",
-      "[Parallel(n_jobs=4)]: Done  16 out of  20 | elapsed:    6.6s remaining:    1.7s\n",
-      "[Parallel(n_jobs=4)]: Done  20 out of  20 | elapsed:    7.5s finished\n",
-      "INFO:hcga.extraction:970 feature extracted.\n"
+      "[Parallel(n_jobs=4)]: Done  10 tasks      | elapsed:    4.5s\n",
+      "[Parallel(n_jobs=4)]: Done  16 out of  20 | elapsed:    7.0s remaining:    1.8s\n",
+      "[Parallel(n_jobs=4)]: Done  20 out of  20 | elapsed:    8.4s finished\n",
+      "INFO:hcga.extraction:1093 feature extracted.\n"
      ]
     }
    ],
    "source": [
     "# extract features for the secondary dataset with no labels\n",
-    "h.load_data('./datasets/custom_dataset_classification_unlabelled.pkl',prediction_graphs=True) # set prediction graphs to True\n",
-    "h.extract(mode='fast', n_workers=4, timeout=20, prediction_set=True) # set prediction set to True\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Predict unlabelled data"
+    "h.load_data('./datasets/custom_dataset_classification_unlabelled.pkl') # set prediction graphs to True\n",
+    "h.extract(mode='fast', n_workers=4, timeout=20) # set prediction set to True\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:hcga.analysis:970 total features\n",
+      "INFO:hcga.analysis:1093 total features\n",
       "INFO:hcga.analysis:0 graphs were removed for more than 0.3 fraction of bad features\n",
-      "INFO:hcga.analysis:897 valid features\n",
-      "INFO:hcga.analysis:897 with interpretability 1\n",
-      "INFO:hcga.analysis:... Using Xgboost classifier ...\n"
+      "INFO:hcga.analysis:1017 valid features\n",
+      "INFO:hcga.analysis:1017 with interpretability 1\n"
      ]
     }
    ],
    "source": [
-    "y = h.predict_unlabelled_graphs()\n"
+    "h.analyse_features(plot=False, trained_model='./results/test/fitted_model', results_folder='./results/test')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lets look at the predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    y_prediction\n",
+      "0            0.0\n",
+      "1            0.0\n",
+      "2            0.0\n",
+      "3            0.0\n",
+      "4            0.0\n",
+      "5            0.0\n",
+      "6            0.0\n",
+      "7            0.0\n",
+      "8            0.0\n",
+      "9            0.0\n",
+      "10           1.0\n",
+      "11           1.0\n",
+      "12           1.0\n",
+      "13           1.0\n",
+      "14           1.0\n",
+      "15           1.0\n",
+      "16           1.0\n",
+      "17           1.0\n",
+      "18           1.0\n",
+      "19           1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "predictions = pd.read_csv('./results/test/prediction_results.csv',index_col=0)\n",
+    "print(predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
